--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 .screen { 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: flex-end;
     height: 100px;
     width: 300px;
@@ -51,10 +51,11 @@ h1 {
     border-radius: 10px;
     justify-content: center;
     align-items: center;
-    width: 60px;
+    min-width: 60px;
     height: 45px;
 }
 
 #equals {
-    grid-column: 4;
+    grid-column-start: 1;
+    grid-column-end: 5;
 }
